hr spacing on homepage resolved half column resolved

--- a/app/styles/components/modules.less
+++ b/app/styles/components/modules.less
@@ -912,6 +912,12 @@ body{
 				}
 				p.medium{
 					display: inline-block;
+					padding-top: 0px;
+					margin-top: 0px;
+				}
+				.heading-text{
+					padding-bottom: 0px;
+					margin-bottom: 0px;
 				}
 				hr{
 					display: inline-block;
@@ -928,6 +934,9 @@ body{
 					font-size: @font-size-h2;
 				}
 				padding: 0px 0px;
+				hr{
+					padding: 0px auto;
+				}
 			}
 		}
 		//the resolution to having the negative margin on both of these is to include a fixed row height for the row just outside the columns
